Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1978 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -28,6 +28,7 @@
       * [Terminology]
       * [Instructions How to apply OpenMalaria to field sites]
   * *[ModelsOverview Model descriptions]*
+    * [ModelTimeUpdates Orders of updates]
     * [ModelDemography Human demography]
     * [ModelTransmission Transmission models]
     * [ModelWithinHost Within-host models]
