Edited wiki page ModelTimeUpdates through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1979 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelTimeUpdates.wiki
+++ b/wiki/ModelTimeUpdates.wiki
@@ -1,5 +1,8 @@
 #summary Explanation of simulation phases and updates with respect to times
 
+<wiki:toc max_depth="2" />
+
+
 = Simulation phases =
 
 The simulation has the following phases. They take place sequentially as ordered below.
