Edited wiki page ModelTransmission through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1983 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelTransmission.wiki
+++ b/wiki/ModelTransmission.wiki
@@ -1,18 +1,22 @@
 #summary Transmission models
 
-= Transmission =
+The transmission sub-models within OpenMalaria cover inter-human transmission of malaria, taking modeled values of human infectiousness to mosquitoes as input and translating this into subsequent human exposure to infectious mosquitoes (as inoculations per person per year, denoted EIR: Entomological Infection Rate).  The human's relative availability to mosquitoes is taken into account in both cases.  The simulator is designed to simulate seasonally forced transmission, i.e. we assume that in the absence of interventions the EIR recurs annually with the same seasonal pattern.
 
-The transmission models cover inter-human transmission of malaria, from measuring human infectiousness to mosquitoes to the point of describing each human's exposure (as inoculations per person per year, denoted EIR: Entomological Infection Rate), potentially taking the human's relative availability to mosquitoes into account in both cases.  The simulator is designed to simulate seasonally forced transmission, i.e. we assume that in the absence of interventions the EIR recurs annually with the same seasonal pattern.
+OpenMalaria currently supports two distinct sets of algorithms for transmission models:  vector transmission and "non-vector" transmission.
 
-For simulating situations where there are no intervention effects on the mosquito vector, the initial rates of exposure of the human population can be input. OpenMalaria currently supports two models of transmission to humans: "non-vector" transmission and vector transmission.
+== Vector transmission ==
 
-== Non-vector transmission ==
+The "vector transmission" model used by OpenMalaria is required for modeling interventions that have effects on mosquitoes, and hence change the vectorial capacity.  
 
-When the non-vector model is used, initial exposure of humans to infectious mosquito bits is input and any intervention effects on transmission to the mosquito translate into proportionate effects on transmission back to the human.
+Simulations that include non-periodic changes in the vectorial capacity use a seasonally forced version of the difference equation model for vector dynamics of [http://www.informaworld.com/smpp/content~content=a795158564&db=all Chitnis et al (2008)Journal of Biological Dynamics Vol. 2, No. 3, July 2008, 259–285], further described in [http://www.ajtmh.org/cgi/content/full/83/2/230 Chitnis et al (2010) American Journal of Tropical Medicine and Hygiene Vol. 83, No. 2, 230--240].
 
-[http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/11 Smith et al, 2005.]
-The 'Non-vector transmission' sub-model can be used only when there are no interventions affecting the vectorial capacity.  
+XML parameters for specifying this sub-model are described [XmlEntoVector here].
 
+== "Non-vector" transmission ==
+
+When the "non-vector" model is used, initial exposure of humans to infectious mosquito bits is input and any intervention effects on transmission to the mosquito translate into proportionate effects on transmission back to the human.  There is no explicit modeling of the mosquito population.  The 'Non-vector transmission' sub-model can be used only when there are no interventions affecting the vectorial capacity and is described in:
+[http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/11 Smith et al, 2006.]
+  
 This model assumes that the mosquito population acts to distribute infections at random to the human population (with human exposure proportionate to availability).  There is a fixed time lag between infection of the mosquito and transmission to humans, corresponding to the duration of the sporogonic cycle in the mosquito.  The effect on transmission of interventions on the human population is simulated by changing the infectiousness to mosquitoes. 
  
 The average human infectiousness to mosquitoes, denoted `kappa`, is measured by the function `updateKappa`, according to the formula
@@ -26,11 +30,3 @@ The Entomological Infection Rate can be calculated in three modes: `equilibriumM
 ==== Notes ====
 
 Simulated EIR is delayed relative to changes in `kappa_d / initialKappa_d` by the entomological innoculation duration, usually parameterised in our simulations with the non-vector model as 10 days. However, a bug introduced in schema version 26 reduced this lag to 1 time-step (5-days for the 5-day time-step model). This bug should be fixed in version 30.
-
-== Vector transmission ==
-
-The "vector transmission" model used by OpenMalaria extends the modelling of _P. falciparum_ parasites within vector mosquitoes such that vector-stage interventions on transmission can be modelled.
-
-Simulations that include non-periodic changes in the vectorial capacity use a seasonally forced version of the model for vector dynamics of [http://www.informaworld.com/smpp/content~content=a795158564&db=all Chitnis et al (2008)Journal of Biological Dynamics Vol. 2, No. 3, July 2008, 259–285], further described in [http://www.ajtmh.org/cgi/content/full/83/2/230 Chitnis et al (2010) American Journal of Tropical Medicine and Hygiene Vol. 83, No. 2, 230--240].
-
-XML parameters for vector transmission are described [XmlEntoVector here].
