--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -2,9 +2,10 @@
 
 Welcome to the !OpenMalaria wiki on google-code.
 
-OpenMalaria is an open source C++ program for simulating malaria epidemiology and interventions against malaria.  It is based on microsimulations of _Plasmodium falciparum_ malaria in humans, originally developed for simulating malaria vaccines.
+OpenMalaria is an open source C++ program for simulating malaria epidemiology and interventions against malaria.  It is based on microsimulations of _Plasmodium falciparum_ malaria in humans, originally developed for simulating malaria vaccines and described  
+[http://www.ajtmh.org/content/75/2_suppl here].
 
-<wiki:toc max_depth="1" />
+Other publications of the project are listed below:
 
 = Applications & Usage =
 
@@ -50,6 +51,10 @@ Instructions for compiling the code can be found [BuildSystem here].
 and the [http://www.lstmliverpool.ac.uk Liverpool School of Tropical Medicine] with financial support from the [http://www.gatesfoundation.org/Pages/home.aspx Bill & Melinda Gates Foundation]
 
 For public discussion, please use the [http://groups.google.com/group/openmalaria openmalaria] google group.
+
+= Publications =
+
+[http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=2657312]
 
 = Offline Documentation =
 
