--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -3,17 +3,21 @@
 Welcome to the !OpenMalaria wiki on google-code.
 
 !OpenMalaria is an open source C++ program for simulating malaria epidemiology and interventions against malaria.  It is based on microsimulations of _Plasmodium falciparum_ malaria in humans, originally developed for simulating malaria vaccines and described  
-[http://www.ajtmh.org/content/75/2_suppl here]. The models simulate the dynamics of malaria parasitaemia in the course of an infection, of transmission, of immunity, and of the processes leading to illness and death.  They also simulate interventions against malaria (both by controlling the mosquito vector, or by acting against malaria in humans (e.g. by chemotherapy, or vaccines).    
+[http://www.ajtmh.org/content/75/2_suppl here]. These models simulate the dynamics of malaria parasitaemia in the course of an infection, of transmission, of immunity, and of the processes leading to illness and death. The system is set up to simulate malaria in village, or district size human populations. The original models have been extended to include simulation of the dynamics of malaria in the mosquito vector, and by including alternative model structures for many of the components of the human models. The models allow for variations between humans in their exposure to mosquitoes, and in their responses to the parasite, but do not consider  
 
-= Applications & Usage =
+!OpenMalaria can be used to simulate interventions against malaria (both interventions against the mosquito vector, and interventions that acting against malaria in humans (e.g. by chemotherapy, or vaccines).   
 
-The applications of !OpenMalaria are:
+!OpenMalaria makes use of a is a general platform for comparing, fitting, and evaluating different malaria models, to ensure that the models reproduce patterns of infection and disease observed in the field in malaria endemic areas. 
 
-==Optimizing models of malaria epidemiology and control==
+The main applications of !OpenMalaria are:
 
-!OpenMalaria makes use of a is a general platform for comparing, fitting, and evaluating different malaria models.  
+- Prediction of the effects of novel interventions to inform the development of target product profiles
 
-==Prediction of the effects of different interventions and control programs==
+- Prediction of the effects of different deployment strategies for existing interventions, to help in planning malaria control programs. 
+
+Outputs from !OpenMalaria can be linked to costing data as part of economic evaluations (e.g. cost-effectiveness analyses)
+
+= Usage =
 
 There are several methods of carrying out predictive simulations:
 
