Edited wiki page Start through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2003 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -54,4 +54,4 @@ and the [http://www.lstmliverpool.ac.uk Liverpool School of Tropical Medicine] w
 
 For public discussion, please use the [http://groups.google.com/group/openmalaria openmalaria] google group.
 
-== [References] ==
+= [References] =
