--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -21,7 +21,7 @@ Outputs from !OpenMalaria can be linked to costing data as part of economic eval
 
 == Simulation of current malariological situations ==
 
-Simulations of _status quo_ malaria situations can be used for estimating parameters that have not been measured, from field data.  For instance, the models can be used to predict mortality rates from entomological data. Such simulations are also useful for validating models.
+Simulations of _status quo_ malaria situations can be used for estimating parameters that have not been measured from field data.  For instance, the models can be used to predict mortality rates from entomological data. Such simulations are also useful for validating models.
 
 For first-time users, an overview of how to set up and use !OpenMalaria to simulate malaria in a particular field site can be found [http://code.google.com/p/openmalaria/wiki/Instructions here]. 
 
