Edited wiki page SetupOverview through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2009 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/SetupOverview.wiki
+++ b/wiki/SetupOverview.wiki
@@ -1,6 +1,6 @@
 #summary Overview of building and installation methods
 
-= Overview of how to use OpenMalaria for simulating a field site =
+= Overview of how to use !OpenMalaria for simulating a field site =
 
   * [Instructions simulating field sites]
 
