Edited wiki page Start through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2013 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -7,7 +7,7 @@ Welcome to the !OpenMalaria wiki on google-code.
 
 !OpenMalaria can be used to simulate interventions against malaria (both interventions against the mosquito vector, and interventions that acting against malaria in humans (e.g. by chemotherapy, or vaccines).   
 
-!OpenMalaria makes use of a is a general platform for comparing, fitting, and evaluating different malaria models, to ensure that the models reproduce patterns of infection and disease observed in the field in malaria endemic areas. 
+!OpenMalaria is a general platform for comparing, fitting, and evaluating different malaria models, to ensure that the models reproduce patterns of infection and disease observed in the field in malaria endemic areas. 
 
 = Applications =
 
