Edited wiki page Start through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2015 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -43,7 +43,9 @@ The project also analyzes different components of uncertainty associated with se
 
 == [Code] ==
 
-The core program is now entirely written in C++ with a [http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU GPL 2 licence]. TODO: an overview of the code. This code can be found e openmalaria project now has a [https://www.ohloh.net/p/openmalaria considerable code base]. 
+The core program is now entirely written in C++ with a [http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU GPL 2 licence]. 
+
+The source code can be found [http://code.google.com/p/openmalaria/source/browse/ here] and there is an overview of the state of !OpenMalaria software development [https://www.ohloh.net/p/openmalaria here].  
 
 Instructions for compiling the code can be found [BuildSystem here].
 
@@ -51,7 +53,7 @@ Instructions for compiling the code can be found [BuildSystem here].
 
 Each simulation requires implementation of various components, from transmission to within-host parasite dynamics to drug action.
 
-For an overview of these model components see [ModelsOverview here]. 
+There is an overview of these model components [ModelsOverview here]. 
 
 = Team =
 
